# adventofcode-2022

./: .gitignore  Makefile  README.md  pyproject.toml
aoc2022/common/: cli.py
aoc2022/day01/: __init__.py
aoc2022/day02/: __init__.py
aoc2022/day03/: __init__.py
aoc2022/day09/: __init__.py
aoc2022/day12/: __init__.py
